# amirstan_plugin

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml
include/amir_cuda_util/: common_util.h  cuda_util.h  cudnn_util.h
include/plugin/: amirInferPlugin.h
include/plugin/adaptivePoolPlugin/: adaptivePoolPlugin.h
include/plugin/batchedNMSPlugin/: batchedNMSPlugin.h
include/plugin/carafeFeatureReassemblePlugin/: carafeFeatureReassemblePlugin.h
include/plugin/deformableConvPlugin/: deformableConvPlugin.h  modulatedDeformableConvPlugin.h
include/plugin/deformablePoolPlugin/: deformablePoolPlugin.h
include/plugin/delta2bboxPlugin/: delta2bboxPlugin.h
include/plugin/exViewPlugin/: exViewPlugin.h
include/plugin/gridAnchorDynamicPlugin/: gridAnchorDynamicPlugin.h
include/plugin/gridSamplePlugin/: gridSamplePlugin.h
include/plugin/groupNormPlugin/: groupNormPlugin.h
include/plugin/layerNormPlugin/: layerNormPlugin.h
include/plugin/meshGridPlugin/: meshGridPlugin.h
include/plugin/repeatDimsPlugin/: repeatDimsPlugin.cpp  repeatDimsPlugin.h
include/plugin/roiExtractorPlugin/: roiExtractorPlugin.h
include/plugin/roiPoolPlugin/: roiPoolPlugin.h
include/plugin/torchBmmPlugin/: torchBmmPlugin.h
include/plugin/torchCumMaxMinPlugin/: torchCumMaxMinPlugin.h
include/plugin/torchCumPlugin/: torchCumPlugin.h
include/plugin/torchEmbeddingPlugin/: torchEmbeddingPlugin.h
include/plugin/torchFlipPlugin/: torchFlipPlugin.h
include/plugin/torchGatherPlugin/: torchGatherPlugin.h
include/plugin/torchNMSPlugin/: torchNMSPlugin.h
src/: CMakeLists.txt
src/amir_cuda_util/: CMakeLists.txt  memcpyPermute.cu  reduceUtils.cuh  repeatDims.cu  tensorMeanVar.cu
src/plugin/: CMakeLists.txt  InferPlugin.cpp  NvDsInferParseMmdet.cpp
src/plugin/adaptivePoolPlugin/: CMakeLists.txt  adaptivePoolPlugin.cpp  adaptivePoolPlugin.h  adaptive_pool.cu  adaptive_pool.h
src/plugin/batchedNMSPlugin/: CMakeLists.txt  allClassNMS.cu  batchedNMSInference.cpp  batchedNMSInference.h  batchedNMSPlugin.cpp  batchedNMSPlugin.h  bboxUtils.h  common.cu  common.h  cub_helper.h  gatherNMSOutputs.cu  gatherNMSOutputs.h  kernel.cpp  kernel.h  nmsHelper.cpp  nmsUtils.h  permuteData.cu  plugin.h  sortScoresPerClass.cu  sortScoresPerImage.cu
src/plugin/carafeFeatureReassemblePlugin/: CMakeLists.txt  carafeFeatureReassemblePlugin.cpp  carafeFeatureReassemblePlugin.h  carafe_cuda.h  carafe_cuda_kernel.cu
src/plugin/common/: amirCommon.h  common.h  layer_base.h  logger.cpp  logger.h  logging.h  serialize.hpp
src/plugin/deformableConvPlugin/: CMakeLists.txt  deform_conv_cuda.cpp  deform_conv_cuda.h  deform_conv_cuda_kernel.cu  deformableConvPlugin.cpp  deformableConvPlugin.h  modulatedDeformableConvPlugin.cpp  modulatedDeformableConvPlugin.h
src/plugin/deformablePoolPlugin/: CMakeLists.txt  deform_roi_pool.cu  deform_roi_pool.h  deform_roi_pool_cuda_kernel.cuh  deformablePoolPlugin.cpp  deformablePoolPlugin.h
src/plugin/delta2bboxPlugin/: CMakeLists.txt  delta2bbox.cu  delta2bbox.h  delta2bboxPlugin.cpp  delta2bboxPlugin.h
src/plugin/exViewPlugin/: CMakeLists.txt  exViewPlugin.cpp  expressionParser.cpp  expressionParser.h
src/plugin/gridAnchorDynamicPlugin/: CMakeLists.txt  gridAnchorDynamicPlugin.cpp  gridAnchorDynamicPlugin.h  grid_anchor_dynamic.cu  grid_anchor_dynamic.h
src/plugin/gridSamplePlugin/: CMakeLists.txt  gridSamplePlugin.cpp  gridSamplePlugin.h  grid_sample.cu  grid_sample.h
src/plugin/groupNormPlugin/: CMakeLists.txt  groupNormPlugin.cpp  groupNormPlugin.h  group_norm.h  group_norm_kernel.cu
src/plugin/layerNormPlugin/: CMakeLists.txt  layerNormPlugin.cpp  layer_norm.h  layer_norm_kernel.cu
src/plugin/meshGridPlugin/: CMakeLists.txt  adaptive_pool.cu  adaptive_pool.h  meshGridPlugin.cpp  meshGridPlugin.h  mesh_grid.cu  mesh_grid.h
src/plugin/repeatDimsPlugin/: CMakeLists.txt  repeatDimsPlugin.cpp
src/plugin/roiExtractorPlugin/: CMakeLists.txt  roiExtractorPlugin.cpp  roiExtractorPlugin.h  roi_extractor.h  roi_extractor_kernel.cu
src/plugin/roiPoolPlugin/: CMakeLists.txt  roiPoolPlugin.cpp  roiPoolPlugin.h  roi_pool.h  roi_pool_kernel.cu
src/plugin/torchBmmPlugin/: CMakeLists.txt  torchBmmPlugin.cpp  torchBmmPlugin.h
src/plugin/torchCumMaxMinPlugin/: CMakeLists.txt  torchCumMaxMinPlugin.cpp  torchCumMaxMinPlugin.h  torch_cum_maxmin.cu  torch_cum_maxmin.h
src/plugin/torchCumPlugin/: CMakeLists.txt  torchCumPlugin.cpp  torchCumPlugin.h  torch_cum.cu  torch_cum.h
src/plugin/torchEmbeddingPlugin/: CMakeLists.txt  torchEmbeddingPlugin.cpp  torchEmbeddingPlugin.h  torch_embedding.cu  torch_embedding.h
src/plugin/torchFlipPlugin/: CMakeLists.txt  torchFlipPlugin.cpp  torch_flip.cu  torch_flip.h
src/plugin/torchGatherPlugin/: CMakeLists.txt  torchGatherPlugin.cpp  torchGatherPlugin.h  torch_gather.cu  torch_gather.h
src/plugin/torchNMSPlugin/: CMakeLists.txt  bboxUtils.h  torchNMSPlugin.cpp  torchNMSPlugin.h  torch_nms.cu  torch_nms.h
src/plugin/torchUnfoldPlugin/: CMakeLists.txt  torchUnfoldPlugin.cpp  torchUnfoldPlugin.h  torch_unfold.cu  torch_unfold.h
